--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
   <link rel="manifest" href="favicons/site.webmanifest">
-  <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#ffd54f">
+  <meta name="msapplication-TileColor" content="#ffd54f">
+  <meta name="theme-color" content="#ffd54f">
   <link rel="manifest" href="favicons/manifest.json">
 
   <!-- Theme style  -->
@@ -66,7 +66,7 @@
         hour = minute * 60,
         day = hour * 24;
 
-      let wedding = "May 21, 2022 15:30:00",
+      let wedding = "May 21, 2022 15:00:00",
         countDown = new Date(wedding).getTime(),
         x = setInterval(function () {
 
@@ -84,7 +84,7 @@
               countdown = document.getElementById("countdown"),
               content = document.getElementById("content");
 
-            headline.innerText = "It's our wedding!";
+            headline.innerText = "Et voilà, nous sommes mariés !";
             countdown.style.display = "none";
             content.style.display = "block";
 
